Feature/update register user controller (#47)
* Update registerUserController to remove file handling

* Renamed photo
